Revert "fix. ikke oppdater tilskuddsperioder dersom de er uendret (#1367)"
This reverts commit 57b0d454aa10292536bf5c79e2693e2d045c81d2.